src/v2/platforms-architectures.md
# Platforms & Architectures

Currently, only the following platforms/architectures are supported.

> [!TIP] Docker tip
>
> For the list of Docker images supported see [Docker OS/Arch](./features/docker.md#osarch) page.

## Linux

### x86

- `i686-unknown-linux-gnu`
- `i686-unknown-linux-musl`

### x86_64

- `x86_64-unknown-linux-gnu`
- `x86_64-unknown-linux-musl`

### ARM

- `arm-unknown-linux-gnueabihf` (armv6)
- `arm-unknown-linux-musleabihf` (armv6)
- `armv7-unknown-linux-musleabihf` (armv7)

### ARM64

- `aarch64-unknown-linux-musl`
- `aarch64-unknown-linux-gnu`
- `aarch64-linux-android`

## macOS

### x86_64

- `x86_64-apple-darwin`

### ARM64

- `aarch64-apple-darwin`

## Windows

### x86

- `i686-pc-windows-msvc`

### x86_64

- `x86_64-pc-windows-msvc`
- `x86_64-pc-windows-gnu`

### ARM64

- `aarch64-pc-windows-msvc`

## FreeBSD

### x86

- `i686-unknown-freebsd`

### x86_64

- `x86_64-unknown-freebsd`

## NetBSD

### x86_64

- `x86_64-unknown-netbsd`

## Illumos

### x86_64

- `x86_64-unknown-illumos`

## PowerPC

- `powerpc64le-unknown-linux-gnu`

## S390X

- `s390x-unknown-linux-gnu`
